# Supply-Chain-Agents

./: .bandit  .dockerignore  .env.example  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_demo.py
.github/: CICD_SETUP.md
.github/workflows/: integration-tests.yml  lint.yml  tests.yml
app/: __init__.py  config.py  graph.py  llm.py  main.py  state.py
app/agents/: __init__.py  delivery.py  demand.py  evaluator.py  exception.py  inventory.py  procurement.py  supplier.py
app/data/: mock_data.py
docs/: AGENTS.md  API.md  CONFIG.md  DEPLOYMENT.md
graphify-out/: .chunk_1_files.txt  .chunk_2_files.txt  .graphify_ast.json  .graphify_chunk_01.json  .graphify_detect.json  .graphify_manual_labels.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: deploy.sh
tests/: test_agents.py  test_graph.py
